k8s/manifests/databases/mariadb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb
  namespace: databases
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-system-rfc1918-ips@kubernetescrd

spec:
  rules:
    - host: &host mariadb.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mariadb
                port:
                  number: 3306

  tls:
    - secretName: traefik-${CLUSTER_NAME}-tls
      hosts:
        - *host
